# bardic-inspiration

./: .cache-12186075795  .env.example  .gitignore  LICENSE  README.md  authenticate.py  bot.py  credential.json  g_authenticate.py  pyproject.toml  requirements.txt  runtime.txt  utils.py
spotify/: spotify.py
utils/: constants.py  spotipy_ext.py  util.py
