[tool.poetry]
name = "bardic-inspiration"
version = "0.1.0"
description = "D&D Discord App"
authors = ["Lando <landonlewisturner@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bardic_inspiration"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
spotipy = "^2.23.0"
discord-py = {extras = ["voice"], version = "^2.2.2"}
wavelink = "^2.0.1"
lavalink = "^4.0.6"
openai = "^0.27.8"
google-api-python-client = "^2.90.0"
google-auth-httplib2 = "^0.1.0"
oauth2client = "^4.1.3"
pydrive2 = "^1.15.4"
spacy = "^3.5.3"
en_core_web_sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz"}

[tool.poetry.group.dev.dependencies]
"discord.py" = "^2.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
